icon and meta data change

--- a/src/index.css
+++ b/src/index.css
@@ -900,6 +900,7 @@ body {
 }
 .welcome {
   font-size: 1rem;
+  font-family: "Quicksand";
   margin-left: 20%;
   display: flex;
   justify-content: center;
