--- a/src/index.css
+++ b/src/index.css
@@ -773,6 +773,7 @@ body {
   z-index: 0;
   margin-top: 120px;
   padding-bottom: 80px;
+  font-family: "Quicksand";
 }
 .Card {
   text-align: center;
